# luvion-wallet

./: .gitignore  App.tsx  BUILD.md  LICENSE  README.md  index.css  index.html  package-lock.json  package.json  tailwind.config.js
contracts/: AtomicSwap.sol  ILuvion.sol
docs/: README.md  WHITE_PAPER.html  WHITE_PAPER.md  WHITE_PAPER_EN.html  WHITE_PAPER_EN.md  architecture.md
scripts/: build-production.sh  build-whitepaper-html.cjs  build-whitepaper-pdf.sh  clean-for-production.sh  (+11 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: audit.toml
src-tauri/src/: db.rs  epoch.rs  main.rs  sdk.rs
src-tauri/src/consensus/: mod.rs  view_change.rs
src-tauri/src/contracts/: vault.rs
src-tauri/src/core/: config.rs
src-tauri/src/crypto/: derive.rs  field.rs  luvion_validator.rs  merkle.rs  mod.rs  mpc.rs  shard_validator.rs  sss.rs  stealth.rs  zk.rs
src-tauri/src/mpc/: core.rs  mod.rs  signing.rs  zk_proof_system.rs
src-tauri/src/p2p/: discovery.rs  heartbeat.rs  incentive.rs  mod.rs  recovery_monitor.rs  reputation.rs  resharding.rs  self_healing.rs  validator.rs
src-tauri/src/protocols/: atomic_swap.rs  blockchain.rs  btc_client.rs  chain_client.rs  commands.rs  eth.rs  mod.rs  simulate.rs  swap.rs  withdraw.rs
src-tauri/src/security/: mod.rs
src-tauri/src/slashing/: mod.rs  registry.rs  traits.rs  types.rs
src-tauri/src/storage/: mod.rs
src-tauri/src/vault/: backup.rs  biometric.rs  commands.rs  enclave.rs  hardened.rs  manager.rs  mod.rs  storage.rs  tee.rs
src-tauri/tests/: node_poisoning_stress_test.rs  withdraw_auth_flow.rs
(+32 files in other folders)
