[package]
name = "luvion_wallet_core"
version = "1.0.0"
edition = "2021"
build = "build.rs"

[dependencies]
tauri = { version = "1", features = ["api-all"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1", features = ["v4"] }
rusqlite = { version = "0.31", features = ["bundled-sqlcipher"] }
argon2 = "0.5"
hex = "0.4"
async-trait = "0.1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
rand = "0.8"
sha2 = "0.10"
aes-gcm = "0.10"
k256 = { version = "0.13", features = ["arithmetic"] }
ark-bn254 = "0.5"
ark-ff = "0.5"
ark-groth16 = "0.5"
ark-serialize = "0.5"
rayon = "1.10"
futures = "0.3"

[features]
custom-protocol = ["tauri/custom-protocol"]

[build-dependencies]
tauri-build = { version = "1", features = [] }
